modifying page style

--- a/style.css
+++ b/style.css
@@ -1925,3 +1925,10 @@ h3.wpfc_grid_title a {
   padding-bottom: 0px;
   padding-top: 0px;
 }
+
+
+.main-content {
+  padding-bottom: 50px;
+  padding-top: 50px;
+  
+} 
