Add DEV msg to theme

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: St. Mary's in Pine Bluff
+Theme Name: St. Mary's in Pine Bluff (DEV)
 Theme URI: https://stmarypb.com/
 Description:
-Version: 1.0
+Version: 1.0.X
 Author: Custom Wordpress for St. Mary's in Pine Bluff Catholic parish. Contact Ben Yanke with any questions about the theme or site.
 Author URI: https://github.com/benyanke
 */
